Fix - Irregular font size and spacing

--- a/src/layout/css/_header.scss
+++ b/src/layout/css/_header.scss
@@ -7,8 +7,16 @@ nav {
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.05);
 }
 
+.navbar-brand {
+    font-size: 2em;
+}
+
 .nav-item {
     margin: 0.125em;
+}
+
+.btn-download {
+    font-size: 1.6em;
 }
 
 .download {
