--- a/src/layout/css/_typography.scss
+++ b/src/layout/css/_typography.scss
@@ -3,7 +3,6 @@
 h1 {
     font-family: Noto Sans;
     font-size: 4.8828125em;
-    line-height: 5rem;
     font-weight: 700;
     font-style: normal;
     letter-spacing: 0em;
@@ -12,7 +11,6 @@ h1 {
 h2 {
     font-family: Noto Sans;
     font-size: 3.90625em;
-    line-height: 4rem;
     font-weight: 700;
     font-style: normal;
     letter-spacing: 0em;
@@ -21,7 +19,6 @@ h2 {
 h3 {
     font-family: Noto Sans;
     font-size: 3.125em;
-    line-height: 4rem;
     font-weight: 700;
     font-style: normal;
     letter-spacing: 0em;
@@ -30,7 +27,6 @@ h3 {
 h4 {
     font-family: Noto Sans;
     font-size: 2.5em;
-    line-height: 3rem;
     font-weight: 700;
     font-style: normal;
     letter-spacing: 0em;
@@ -39,7 +35,6 @@ h4 {
 h5 {
     font-family: Noto Sans;
     font-size: 2em;
-    line-height: 3rem;
     font-weight: 700;
     font-style: normal;
     letter-spacing: 0em;
@@ -47,8 +42,7 @@ h5 {
 
 h6 {
     font-family: Noto Sans;
-    font-size: 2em;
-    line-height: 2rem;
+    font-size: 1.8em;
     font-weight: 700;
     font-style: normal;
     letter-spacing: 0em;
@@ -57,71 +51,63 @@ h6 {
 a, p {
     font-family: Noto Sans;
     font-size: 1.6em;
-    line-height: 2rem;
     font-weight: 400;
     font-style: normal;
     letter-spacing: 0em;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
     h1 {
-        font-family: Montserrat;
-        font-size: 6.103515625em;
-        line-height: 9rem;
+        font-family: Noto Sans;
+        font-size: 3.5em;
         font-weight: 600;
         font-style: normal;
         letter-spacing: 0em;
     }
 
     h2 {
-        font-family: Montserrat;
-        font-size: 4.8828125em;
-        line-height: 6rem;
+        font-family: Noto Sans;
+        font-size: 2.75em;
         font-weight: 600;
         font-style: normal;
         letter-spacing: 0em;
     }
 
     h3 {
-        font-family: Montserrat;
-        font-size: 3.90625em;
-        line-height: 6rem;
+        font-family: Noto Sans;
+        font-size: 2.25em;
         font-weight: 600;
         font-style: normal;
         letter-spacing: 0em;
     }
 
     h4 {
-        font-family: Montserrat;
-        font-size: 3.125em;
-        line-height: 6rem;
+        font-family: Noto Sans;
+        font-size: 2em;
         font-weight: 600;
         font-style: normal;
         letter-spacing: 0em;
     }
 
     h5 {
-        font-family: Montserrat;
-        font-size: 2.5em;
-        line-height: 3rem;
+        font-family: Noto Sans;
+        font-size: 2em;
         font-weight: 600;
         font-style: normal;
         letter-spacing: 0em;
     }
 
     h6 {
-        font-family: Montserrat;
-        font-size: 2em;
-        line-height: 3rem;
+        font-family: Noto Sans;
+        font-size: 1.8em;
         font-weight: 600;
         font-style: normal;
         letter-spacing: 0em;
     }
 
     a, p {
-        font-family: Lora;
+        font-family: Noto Sans;
         font-size: 1.6em;
-        line-height: 3rem;
         font-weight: 400;
         font-style: normal;
         letter-spacing: 0em;
